[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-web-actors = "4.0.0"
futures-util = "0.3"
actix-rt = "2.5"
actix-ws = "0.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
actix = "0.13.5"
serde_json = "1.0.69"
webrtc = "0.11.0"
